test/tests/stages/17_supporting_dynamic_memory_allocation/valid/sizeof/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  sizeof
  (
  int
  )
  !=
  const int(4)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  sizeof
  const double(3.0)
  !=
  const int(8)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
