test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_in_cast.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  (
  void
  (
  *
  )
  [
  const int(3)
  ]
  )
  const int(4)
  ;
  return
  const int(0)
  ;
  }
